--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Ian J Choi</title>
     <style>
+      body {
+        margin: 0;
+        padding: 24px;
+        line-height: 1.5;
+      }
+      main {
+        max-width: 920px;
+        margin: 0 auto;
+      }
+      header {
+        max-width: 920px;
+        margin: 0 auto;
+      }
       details {
         margin-left: 16px;
       }
@@ -13,12 +26,12 @@
       }
     </style>
   </head>
-  <body style="margin: 0 24px;">
+  <body>
     <header>
       <img
         src="profile.png"
         alt="Profile photo"
-        style="float: right; max-width: 160px; height: auto; margin: 0 0 12px 16px;"
+        style="float: right; max-width: 160px; height: auto; margin: 0 0 12px 24px;"
       />
       <h1>Ian J Choi</h1>
       <p>
@@ -46,7 +59,11 @@
           <details>
             <summary>00 – OS Fundamentals & Big Picture</summary>
             <ul>
-              <li><a href="#">Introduction to OS/Unix</a></li>
+              <li>
+                <a href="notes/os/introduction-to-os-unix.html" target="_blank" rel="noopener noreferrer"
+                  >Introduction to OS/Unix</a
+                >
+              </li>
               <li><a href="#">Linux Overview</a></li>
             </ul>
           </details>
@@ -69,32 +86,6 @@
         </details>
         <details>
           <summary>System Programming</summary>
-          <details>
-            <summary>00 – OS Fundamentals & Big Picture</summary>
-            <ul>
-              <li><a href="#">Introduction to OS/Unix</a></li>
-              <li><a href="#">Linux Overview</a></li>
-            </ul>
-          </details>
-          <details>
-            <summary>01 – Processes, Execution, and System Calls</summary>
-            <ul>
-              <li><a href="#">UNIX signals</a></li>
-              <li><a href="#">Linux System Calls</a></li>
-              <li><a href="#">Run queues and wait queues</a></li>
-            </ul>
-          </details>
-          <details>
-            <summary>02 – Threads and Concurrency Control</summary>
-            <ul>
-              <li><a href="#">POSIX threads</a></li>
-              <li><a href="#">Synchronization</a></li>
-              <li><a href="#">Interrupts & Spin Locks</a></li>
-            </ul>
-          </details>
-        </details>
-        <details>
-          <summary>Embedded Systems</summary>
           <details>
             <summary>00 – OS Fundamentals & Big Picture</summary>
             <ul>
