--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@ ian@ianjchoi.com ~ %
 ian@ianjchoi.com ~ % ls -l
 total 283
 -rw-r--r-- ian staff 3887 Jan 24 00:23 about.html
-drw-r--r-- ian staff 3887 Jan 24 00:23 code
+drwxr--r-- ian staff 3887 Jan 24 00:23 code
 drw-r--r-- ian staff 3887 Jan 24 00:23 blog
 ian@ianjchoi.com ~ %
 ian@ianjchoi.com ~ %
-ian@ianjchoi.com ~ %
-ian@ianjchoi.com ~ %
-ian@ianjchoi.com ~ %
-ian@ianjchoi.com ~ %
-ian@ianjchoi.com ~ %
+ian@ianjchoi.com ~ % cd code
+ian@ianjchoi.com code %
+ian@ianjchoi.com code %
+ian@ianjchoi.com code %
+ian@ianjchoi.com code % ls -l
 ian@ianjchoi.com ~ %
 ian@ianjchoi.com ~ %
 ian@ianjchoi.com ~ %
