--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ ian@ianjchoi.com ~ %
 ian@ianjchoi.com ~ %
 ian@ianjchoi.com ~ % ls -l
 total 283
--rw-r--r-- ian staff 3887 Jan 24 00:23 about.html
+-rw-r--r-- ian staff 3887 Jan 24 00:23 <a class="terminal-link" href="html/about.html">about.html</a>
 drwxr--r-- ian staff 3887 Jan 24 00:23 code
 drw-r--r-- ian staff 3887 Jan 24 00:23 blog
 ian@ianjchoi.com ~ %
