--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@ ian@ianjchoi.com ~ %
 ian@ianjchoi.com ~ % ls -l
 total 283
 drw-r--r-- ian staff 3887 Jan 24 00:23 <a class="terminal-link about-link" href="about/">about</a>
-drwxr--r-- ian staff 3887 Jan 24 00:23 code
-drw-r--r-- ian staff 3887 Jan 24 00:23 blog
+drwxr--r-- ian staff 3887 Jan 24 00:23 <a class="terminal-link about-link" href="thought_process/">thought_process</a>
+drw-r--r-- ian staff 3887 Jan 24 00:23 <a class="terminal-link about-link" href="blog/">blog</a>
 -rw-r--r-- ian staff  512 Jan 24 00:23 welcome.txt
 ian@ianjchoi.com ~ %
 ian@ianjchoi.com ~ %
