--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
-  <pre>
+  <pre id="terminal">
 Last login: Fri Jan 23 23:23:01 on ttys000
-ian@ianjchoi.com ~ %
+ian@ianjchoi.com ~ % 
 ian@ianjchoi.com ~ %
 ian@ianjchoi.com ~ % cat welcome.txt
 
@@ -26,7 +26,8 @@ drwxr--r-- ian staff 3887 Jan 24 00:23 <a class="terminal-link about-link" href=
 drw-r--r-- ian staff 3887 Jan 24 00:23 <a class="terminal-link about-link" href="blog/">blog</a>
 -rw-r--r-- ian staff  512 Jan 24 00:23 welcome.txt
 ian@ianjchoi.com ~ %
-ian@ianjchoi.com ~ %
+ian@ianjchoi.com ~ % <span class="terminal-cursor">█</span>
   </pre>
+  <script src="js/terminal.js"></script>
 </body>
 </html>
