--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ ian@ianjchoi.com ~ % cat welcome.txt
 +-----------------------------------------------------------------------+
 |                          Welcome to my site!                          |
 |       I’m Ian. This is my personal website styled like a terminal.    |
+|         Feel free to explore. Hint: try cd, ls -l, cat command!       |
 +-----------------------------------------------------------------------+
 
 ian@ianjchoi.com ~ %
