--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@ ian@ianjchoi.com ~ % cat welcome.txt
 +---------------------------------------------------------------------------------+
 |                               Welcome to my site!                               |
 |            I’m Ian. This is my personal website styled like a terminal.         |
-|      Feel free to explore. Hint: try cd, ll(alias of ls -alF), cat command!     |
+|      Feel free to explore. Hint: try cd, ll (alias of ls -alF), cat command!    |
 +---------------------------------------------------------------------------------+
 
 ian@ianjchoi.com ~ %
-ian@ianjchoi.com ~ % ls -l
+ian@ianjchoi.com ~ % ll
 total 283
 drw-r--r-- ian staff 3887 Jan 24 00:23 about
 drwxr--r-- ian staff 3887 Jan 24 00:23 tech
