--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@ ian@ianjchoi.com ~ % cat welcome.txt
 ian@ianjchoi.com ~ %
 ian@ianjchoi.com ~ % ll
 total 283
+drwxr-xr-x@  9 ian  staff   288 Jan 27 14:55 ./
+drwxr-xr-x   5 ian  staff   160 Jan 22 10:46 ../
 drw-r--r-- ian staff 3887 Jan 24 00:23 about
 drwxr--r-- ian staff 3887 Jan 24 00:23 tech
 -rw-r--r-- ian staff  512 Jan 24 00:23 welcome.txt
