--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@ ian@ianjchoi.com ~ % ll
 total 283
 drwxr-xr-x@  9  ian  staff   288 Jan 27 14:55 ./
 drwxr-xr-x   5  ian  staff   160 Jan 22 10:46 ../
-drw-r--r--   3  ian  staff  3887 Jan 24 00:23 about
-drwxr--r--  11  ian  staff  3887 Jan 24 00:23 tech
+drw-r--r--   3  ian  staff  3887 Jan 24 00:23 about/
+drw-r--r--   3  ian  staff  3887 Jan 24 00:23 projects/
+drw-r--r--  11  ian  staff  3887 Jan 24 00:23 blog/
 -rw-r--r--   2  ian  staff   512 Jan 24 00:23 welcome.txt
 ian@ianjchoi.com ~ %
 ian@ianjchoi.com ~ % <span class="terminal-cursor">█</span>
