modify location of each file

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@ ian@ianjchoi.com ~ % cat welcome.txt
 
 ian@ianjchoi.com ~ %
 ian@ianjchoi.com ~ % ll
-total 283
-drwxr-xr-x@  9  ian  staff   288 Jan 27 14:55 ./
-drwxr-xr-x   5  ian  staff   160 Jan 22 10:46 ../
-drw-r--r--   3  ian  staff  3887 Jan 24 00:23 about/
-drw-r--r--   3  ian  staff  3887 Jan 24 00:23 projects/
-drw-r--r--  11  ian  staff  3887 Jan 24 00:23 blog/
--rw-r--r--   2  ian  staff   512 Jan 24 00:23 welcome.txt
+total 24
+drwxr-xr-x@ 7 ian  staff   224 Feb  2 21:34 ./
+drwxr-xr-x@ 9 ian  staff   288 Jan 27 14:55 ../
+drwxr-xr-x  4 ian  staff   128 Jan 25 09:31 about/
+drwxr-xr-x@ 6 ian  staff   192 Jan 31 15:24 blog/
+drwxr-xr-x@ 2 ian  staff    64 Feb  2 21:34 projects/
+-rw-r--r--@ 1 ian  staff   423 Jan 26 23:08 welcome.txt
 ian@ianjchoi.com ~ %
 ian@ianjchoi.com ~ % <span class="terminal-cursor">█</span>
   </pre>
