--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@ ian@ianjchoi.com ~ % cat welcome.txt
 |            I’m Ian. This is my personal website styled like a terminal.         |
 |      Feel free to explore. Hint: try cd, ll (alias of ls -alF), cat command!    |
 +---------------------------------------------------------------------------------+
++---------------------------------------------------------------------------------+
+|                   FYBCL(For Your Better College Life) Support                   |
+|          If you have questions, issues, or feedback about the FYBCL app,        |
+|                       please contact: ic2561@columbia.edu                       |                    |
++---------------------------------------------------------------------------------+
 
 ian@ianjchoi.com ~ %
 ian@ianjchoi.com ~ % ll
