--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ ian@ianjchoi.com ~ % cat welcome.txt
 +---------------------------------------------------------------------------------+
 |                   FYBCL(For Your Better College Life) Support                   |
 |          If you have questions, issues, or feedback about the FYBCL app,        |
-|                       please contact: ic2561@columbia.edu                       |                    |
+|                       please contact: ic2561@columbia.edu                       |
 +---------------------------------------------------------------------------------+
 
 ian@ianjchoi.com ~ %
