--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@ ian@ianjchoi.com ~ % cat welcome.txt
 
 +---------------------------------------------------------------------------------+
 |                               Welcome to my site!                               |
-|            I’m Ian. This is my personal website styled like a terminal.         |
-|      Feel free to explore. Hint: try cd, ll (alias of ls -alF), cat command!    |
+|    I’m Ian(or Ji Hyock). This is my personal website styled like a terminal.    |
+|              Feel free to explore. Hint: try cd, ls -l, cat command!            |
 +---------------------------------------------------------------------------------+
 +---------------------------------------------------------------------------------+
 |                   FYBCL(For Your Better College Life) Support                   |
