--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ ian@ianjchoi.com ~ % cat welcome.txt
 +---------------------------------------------------------------------------------+
 |                               Welcome to my site!                               |
 |    I’m Ian(or Ji Hyock). This is my personal website styled like a terminal.    |
-|              Feel free to explore. Hint: try cd, ls -l, cat command!            |
+|          Feel free to explore. Hint: try cd, ll(ls -l), cat command!            |
 +---------------------------------------------------------------------------------+
 
 ian@ianjchoi.com ~ %
